<resources>
    <string name="app_name">Peertube</string>
    <string name="meta_data_views">\u0020views</string>
    <string name="video_owner_fqdn_line">%1$s@%2$s</string>
    <string name="meta_data_seperator" translatable="false">\u0020-\u0020</string>
    <string name="player_time_seperator">/</string>
    <string name="settings_activity_look_and_feel_category_title"><![CDATA[Look & Feel]]></string>
    <string name="pref_language_app">Application language</string>
    <string name="pref_title_app_theme">App Theme</string>
    <string name="pref_title_dark_mode">Dark Mode</string>
    <string name="settings_activity_video_list_category_title">Video List</string>
    <string name="pref_title_show_nsfw">NSFW Content</string>
    <string name="pref_description_show_nsfw">Show NSFW content</string>
    <string name="pref_language">language filter</string>
    <string name="pref_description_language">Select a video language, instead of showing all videos in all languages.</string>
    <string name="settings_activity_video_playback_category_title">Video Playback</string>
    <string name="pref_title_video_speed">Default Playback Speed</string>
    <string name="pref_title_back_pause">Pause on back button</string>
    <string name="pref_description_back_pause">Pause background play when pressing back during video playback.</string>
    <string name="pref_background_behavior">Background playing Configuration</string>
    <string name="settings_activity_advanced_category_title">Advanced</string>
    <string name="pref_title_accept_insecure">Disable SSL Certificate Check</string>
    <string name="pref_description_accept_insecure">Ignore insecure connections. Use this only if you know the server you are connecting to. Requires App Restart.</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="clear_search_history_prompt">Do you want to permanently delete the search history?</string>
    <string name="settings_activity_about_category_title">About</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_buildtime">Build Time</string>
    <string name="pref_title_license">License</string>
    <string name="pref_description_license">\n<b>GNU Affero General Public License v3.0</b>\n\nPermissions of this strongest copyleft license are conditioned on making available complete source code of licensed works and modifications, which include larger works using a licensed work, under the same license. Copyright and license notices must be preserved. Contributors provide an express grant of patent rights. When a modified version is used to provide a service over a network, the complete source code of the modified version must be made available.</string>
    <string name="pref_background_audio">Continue as a background audio stream</string>
    <string name="pref_background_stop">Stop all playback</string>
    <string name="pref_background_float">Continue playing video in floating window</string>
    <string name="iso_lang_ab">Abkhazian</string>
    <string name="iso_lang_aa">Afar</string>
    <string name="iso_lang_af">Afrikaans</string>
    <string name="iso_lang_ak">Akan</string>
    <string name="iso_lang_sq">Albanian</string>
    <string name="iso_lang_ase">American Sign language</string>
    <string name="iso_lang_am">Amharic</string>
    <string name="iso_lang_ar">Arabic</string>
    <string name="iso_lang_an">Aragonese</string>
    <string name="iso_lang_hy">Armenian</string>
    <string name="iso_lang_as">Assamese</string>
    <string name="iso_lang_av">Avaric</string>
    <string name="iso_lang_ay">Aymara</string>
    <string name="iso_lang_az">Azerbaijani</string>
    <string name="iso_lang_bm">Bambara</string>
    <string name="iso_lang_ba">Bashkir</string>
    <string name="iso_lang_eu">Basque</string>
    <string name="iso_lang_be">Belarusian</string>
    <string name="iso_lang_bn">Bengali</string>
    <string name="iso_lang_bn_rBD">Bengali (Bangladesh)</string>
    <string name="iso_lang_bi">Bislama</string>
    <string name="iso_lang_bs">Bosnian</string>
    <string name="iso_lang_bzs">Brazilian Sign language</string>
    <string name="iso_lang_br">Breton</string>
    <string name="iso_lang_bfi">British Sign language</string>
    <string name="iso_lang_bg">Bulgarian</string>
    <string name="iso_lang_my">Burmese</string>
    <string name="iso_lang_ca">Catalan</string>
    <string name="iso_lang_ch">Chamorro</string>
    <string name="iso_lang_ce">Chechen</string>
    <string name="iso_lang_zh">Chinese</string>
    <string name="iso_lang_csl">Chinese Sign language</string>
    <string name="iso_lang_cv">Chuvash</string>
    <string name="iso_lang_kw">Cornish</string>
    <string name="iso_lang_co">Corsican</string>
    <string name="iso_lang_cr">Cree</string>
    <string name="iso_lang_hr">Croatian</string>
    <string name="iso_lang_cs">Czech</string>
    <string name="iso_lang_cse">Czech Sign language</string>
    <string name="iso_lang_da">Danish</string>
    <string name="iso_lang_dsl">Danish Sign language</string>
    <string name="iso_lang_dv">Dhivehi</string>
    <string name="iso_lang_nl">Dutch</string>
    <string name="iso_lang_dz">Dzongkha</string>
    <string name="iso_lang_en">English</string>
    <string name="iso_lang_eo">Esperanto</string>
    <string name="iso_lang_et">Estonian</string>
    <string name="iso_lang_ee">Ewe</string>
    <string name="iso_lang_fo">Faroese</string>
    <string name="iso_lang_fj">Fijian</string>
    <string name="iso_lang_fi">Finnish</string>
    <string name="iso_lang_fr">French</string>
    <string name="iso_lang_fsl">French Sign language</string>
    <string name="iso_lang_ff">Fulah</string>
    <string name="iso_lang_gl">Galician</string>
    <string name="iso_lang_lg">Ganda</string>
    <string name="iso_lang_ka">Georgian</string>
    <string name="iso_lang_de">German</string>
    <string name="iso_lang_gsg">German Sign language</string>
    <string name="iso_lang_gn">Guarani</string>
    <string name="iso_lang_gu">Gujarati</string>
    <string name="iso_lang_ht">Haitian</string>
    <string name="iso_lang_ha">Hausa</string>
    <string name="iso_lang_he">Hebrew</string>
    <string name="iso_lang_hz">Herero</string>
    <string name="iso_lang_hi">Hindi</string>
    <string name="iso_lang_ho">Hiri Motu</string>
    <string name="iso_lang_hu">Hungarian</string>
    <string name="iso_lang_is">Icelandic</string>
    <string name="iso_lang_ig">Igbo</string>
    <string name="iso_lang_id">Indonesian</string>
    <string name="iso_lang_iu">Inuktitut</string>
    <string name="iso_lang_ik">Inupiaq</string>
    <string name="iso_lang_ga">Irish</string>
    <string name="iso_lang_it">Italian</string>
    <string name="iso_lang_ja">Japanese</string>
    <string name="iso_lang_jsl">Japanese Sign language</string>
    <string name="iso_lang_jv">Javanese</string>
    <string name="iso_lang_kl">Kalaallisut</string>
    <string name="iso_lang_kn">Kannada</string>
    <string name="iso_lang_kr">Kanuri</string>
    <string name="iso_lang_ks">Kashmiri</string>
    <string name="iso_lang_kk">Kazakh</string>
    <string name="iso_lang_km">Khmer</string>
    <string name="iso_lang_ki">Kikuyu</string>
    <string name="iso_lang_rw">Kinyarwanda</string>
    <string name="iso_lang_ky">Kirghiz</string>
    <string name="iso_lang_tlh">Klingon</string>
    <string name="iso_lang_kv">Komi</string>
    <string name="iso_lang_kg">Kongo</string>
    <string name="iso_lang_ko">Korean</string>
    <string name="iso_lang_avk">Kotava</string>
    <string name="iso_lang_kj">Kuanyama</string>
    <string name="iso_lang_ku">Kurdish</string>
    <string name="iso_lang_lo">Lao</string>
    <string name="iso_lang_lv">Latvian</string>
    <string name="iso_lang_li">Limburgan</string>
    <string name="iso_lang_ln">Lingala</string>
    <string name="iso_lang_lt">Lithuanian</string>
    <string name="iso_lang_jbo">Lojban</string>
    <string name="iso_lang_lu">Luba-Katanga</string>
    <string name="iso_lang_lb">Luxembourgish</string>
    <string name="iso_lang_mk">Macedonian</string>
    <string name="iso_lang_mg">Malagasy</string>
    <string name="iso_lang_ms">Malay (macrolanguage)</string>
    <string name="iso_lang_ml">Malayalam</string>
    <string name="iso_lang_mt">Maltese</string>
    <string name="iso_lang_gv">Manx</string>
    <string name="iso_lang_mi">Maori</string>
    <string name="iso_lang_mr">Marathi</string>
    <string name="iso_lang_mh">Marshallese</string>
    <string name="iso_lang_el">Modern Greek (1453-)</string>
    <string name="iso_lang_mn">Mongolian</string>
    <string name="iso_lang_na">Nauru</string>
    <string name="iso_lang_nv">Navajo</string>
    <string name="iso_lang_ng">Ndonga</string>
    <string name="iso_lang_ne">Nepali (macrolanguage)</string>
    <string name="iso_lang_nd">North Ndebele</string>
    <string name="iso_lang_se">Northern Sami</string>
    <string name="iso_lang_no">Norwegian</string>
    <string name="iso_lang_nb">Norwegian Bokmål</string>
    <string name="iso_lang_nn">Norwegian Nynorsk</string>
    <string name="iso_lang_ny">Nyanja</string>
    <string name="iso_lang_oc">Occitan</string>
    <string name="iso_lang_oj">Ojibwa</string>
    <string name="iso_lang_or">Oriya (macrolanguage)</string>
    <string name="iso_lang_om">Oromo</string>
    <string name="iso_lang_os">Ossetian</string>
    <string name="iso_lang_pks">Pakistan Sign language</string>
    <string name="iso_lang_pa">Panjabi</string>
    <string name="iso_lang_fa">Persian</string>
    <string name="iso_lang_pl">Polish</string>
    <string name="iso_lang_pt">Portuguese</string>
    <string name="iso_lang_ps">Pushto</string>
    <string name="iso_lang_qu">Quechua</string>
    <string name="iso_lang_ro">Romanian</string>
    <string name="iso_lang_rm">Romansh</string>
    <string name="iso_lang_rn">Rundi</string>
    <string name="iso_lang_ru">Russian</string>
    <string name="iso_lang_rsl">Russian Sign language</string>
    <string name="iso_lang_sm">Samoan</string>
    <string name="iso_lang_sg">Sango</string>
    <string name="iso_lang_sc">Sardinian</string>
    <string name="prompt_email">Email / Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_bar_title_search">Search</string>
    <string name="action_bar_title_account">Account</string>
    <string name="bottom_nav_title_discover">Discover</string>
    <string name="bottom_nav_title_trending">Trending</string>
    <string name="bottom_nav_title_recent">Recent</string>
    <string name="bottom_nav_title_local">Local</string>
    <string name="bottom_nav_title_subscriptions">Subscriptions</string>
    <string name="pref_description_dark_mode">Restart App for Dark Mode to take effect.</string>
    <string name="pref_description_app_theme">Restart app for theme to take effect.</string>
    <string name="pref_title_torrent_player">Torrent Video Player</string>
    <string name="pref_description_torrent_player">Video playback via a torrent stream. This requires Storage Permissions. (Alpha, not stable!)</string>
    <string name="pref_title_peertube_server">PeerTube Server</string>
    <string name="pref_description_video_speed">Select the global Video Playback Speed</string>
    <string name="pref_description_language_app">Select language for application interface. Restart app for change to take effect.</string>
    <string name="pref_background_behavior_summary">How a playing video responds when going to background</string>
    <string name="video_speed_05">0.5x</string>
    <string name="video_speed_10">Normal</string>
    <string name="video_speed_15">1.5x</string>
    <string name="video_speed_20">2x</string>
    <string name="action_bar_title_address_book">Address Book</string>
    <string name="login_current_server_hint">Current Server</string>
</resources>