<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_activity_look_and_feel_category_title" app:iconSpaceReserved="false">

        <ListPreference
            app:entries="@array/supportedLanguagesArray"
            app:entryValues="@array/supportedLanguagesValues"
            app:key="@string/pref_language_app_key"
            app:summary="@string/pref_description_language_app"
            app:title="@string/pref_language_app"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="AppTheme.BLUE"
            app:entries="@array/themeArray"
            app:entryValues="@array/themeValues"
            app:key="@string/pref_theme_key"
            app:summary="@string/pref_description_app_theme"
            app:title="@string/pref_title_app_theme"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_dark_mode_key"
            app:summary="@string/pref_description_dark_mode"
            app:title="@string/pref_title_dark_mode"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_activity_video_list_category_title" app:iconSpaceReserved="false">

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_show_nsfw_key"
            app:summary="@string/pref_description_show_nsfw"
            app:title="@string/pref_title_show_nsfw"
            app:iconSpaceReserved="false"/>

        <MultiSelectListPreference
            app:defaultValue="@array/empty_array"
            app:entries="@array/languageArray"
            app:entryValues="@array/languageValues"
            app:key="@string/pref_video_language_key"
            app:summary="@string/pref_description_language"
            app:title="@string/pref_language"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_activity_video_playback_category_title" app:iconSpaceReserved="false">

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/videoSpeed"
            app:entryValues="@array/videoSpeedValues"
            app:key="@string/pref_video_speed_key"
            app:summary="@string/pref_description_video_speed"
            app:title="@string/pref_title_video_speed"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/pref_back_pause_key"
            app:summary="@string/pref_description_back_pause"
            app:title="@string/pref_title_back_pause"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="@array/empty_array"
            app:entries="@array/backgroundBehavior"
            app:entryValues="@array/backgroundBehaviorValues"
            app:key="@string/pref_background_behavior_key"
            app:summary="@string/pref_background_behavior_summary"
            app:title="@string/pref_background_behavior"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_torrent_player_key"
            app:summary="@string/pref_description_torrent_player"
            app:title="@string/pref_title_torrent_player"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_activity_advanced_category_title" app:iconSpaceReserved="false">

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_accept_insecure"
            app:summary="@string/pref_description_accept_insecure"
            app:title="@string/pref_title_accept_insecure"
            app:iconSpaceReserved="false"/>

            <Preference
            app:title="@string/clear_search_history"
            app:key="@string/pref_clear_history_key"
            app:summary="@string/clear_search_history_prompt"
            app:iconSpaceReserved="false"/>
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_activity_about_category_title" app:iconSpaceReserved="false">

        <Preference
            app:summary="@string/versionName"
            app:title="@string/pref_title_version"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="pref_buildtime"
            app:summary=""
            app:title="@string/pref_title_buildtime"
            app:iconSpaceReserved="false"/>

        <Preference
            app:summary="@string/pref_description_license"
            app:title="@string/pref_title_license"
            app:iconSpaceReserved="false"/>


    </PreferenceCategory>

</PreferenceScreen>