<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_api_base_url"
        android:inputType="textUri"
        android:key="pref_api_base"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_peertube_server" />

    <!--<SwitchPreference-->
        <!--android:key="pref_background_play"-->
        <!--android:title="@string/pref_title_background_play"-->
        <!--android:summary="@string/pref_description_background_play"-->
        <!--android:defaultValue="true" />-->

    <SwitchPreference
        android:key="pref_show_nsfw"
        android:title="@string/pref_title_show_nsfw"
        android:summary="@string/pref_description_show_nsfw"
        android:defaultValue="false" />

    <ListPreference
        android:title="@string/pref_title_app_theme"
        android:summary="@string/pref_description_app_theme"
        android:key="pref_theme"
        android:defaultValue="AppTheme.ORANGE"
        android:entries="@array/themeArray"
        android:entryValues="@array/themeValues" />

    <SwitchPreference
        android:key="pref_dark_mode"
        android:title="@string/pref_title_dark_mode"
        android:summary="@string/pref_description_dark_mode"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="pref_torrent_player"
        android:title="@string/pref_title_torrent_player"
        android:summary="@string/pref_description_torrent_player"
        android:defaultValue="false" />

    <Preference
        android:title="@string/pref_title_version"
        android:summary="@string/versionName" />

    <Preference
        android:title="@string/pref_title_license"
        android:summary="@string/pref_description_license" />


</PreferenceScreen>
