<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_overview"
        android:title="@string/bottom_nav_title_discover"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_trending"
        android:title="@string/bottom_nav_title_trending"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_recent"
        android:title="@string/bottom_nav_title_recent"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/navigation_local"
        android:title="@string/bottom_nav_title_local"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/navigation_subscriptions"
        android:title="@string/bottom_nav_title_subscriptions"
        app:showAsAction="ifRoom|withText"/>

    <!--<item-->
        <!--android:id="@+id/navigation_account"-->
        <!--android:title="@string/bottom_nav_title_account"-->
        <!--app:showAsAction="ifRoom|withText"/>-->

</menu>
