<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/videoBackgroundColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/video_speed05"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"

        android:text="@string/video_speed_05"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/video_speed10"

        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"

        android:textAllCaps="false"
        android:text="@string/video_speed_10"
        />

    <TextView
        android:id="@+id/video_speed15"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"

        android:text="@string/video_speed_15"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/video_speed20"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"

        android:text="@string/video_speed_20"
        android:textAllCaps="false" />


</LinearLayout>