<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="activity.VideoListActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="300"
        android:title="@string/action_bar_title_search"
        app:showAsAction="always|collapseActionView"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />


    <item
        android:id="@+id/action_server_address_book"
        android:orderInCategory="300"
        android:title="@string/action_bar_title_address_book"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_account"
        android:orderInCategory="300"
        android:title="@string/action_bar_title_account"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/action_server_selection"-->
        <!--android:orderInCategory="300"-->
        <!--android:title="@string/action_bar_title_server_selection"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"-->
        <!--app:showAsAction="ifRoom" />-->

</menu>