<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/videoBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/video_speed05_icon"
            android:layout_width="32dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:gravity="center|start"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/video_speed05"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|start"
            android:text="@string/video_speed_05"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/video_speed10_icon"
            android:layout_width="32dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:gravity="center|start"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/video_speed10"

            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|start"
            android:text="@string/video_speed_10"
            android:textAllCaps="false"

            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/video_speed15_icon"
            android:layout_width="32dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:gravity="center|start"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/video_speed15"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|start"
            android:text="@string/video_speed_15"
            android:textAllCaps="false"

            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/video_speed20_icon"
            android:layout_width="32dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:gravity="center|start"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/video_speed20"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|start"
            android:text="@string/video_speed_20"
            android:textAllCaps="false"

            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>